# cloud-chamber

./: .gitignore  AGENTS.md  NORTH_STAR.md  README.md
app/backend/: pyproject.toml
app/backend/cloud_chamber/: __init__.py  app.py  bomex_case.py  cli.py  cloud_worlds.py  cm1_input_contract.py  cm1_source_customization.py  dry_run_package.py  generated_input_identity.py  igra_catalog.py  igra_recent_cli.py  lan_worker.py  local_run_manager.py  local_run_queue.py  moist_mountain_wave_case.py  mountain_wave_case.py  mountain_wave_terrain_visualization.py  mountain_waves_variations.py  mountain_waves_world.py  observed_sounding.py  output_products.py  pre_run_validation.py  presentation_runs.py  result_cards.py  result_diagnostics.py  result_ingest.py  run_configuration.py  run_manifest.py  run_progress.py  runtime_integrity.py  runtime_storage.py  scenario_catalog.py  scenario_schema.py  selected_region_diagnostics.py  settings.py  simulation_notes.py  sounding_candidates.py  sounding_diagnostics.py  storm_examination.py  supercell_benchmark.py  (+8 more)
app/backend/tests/: igra_fixtures.py  test_app.py  test_bomex_case.py  test_cli.py  test_cloud_worlds.py  test_cm1_input_contract.py  test_dry_run_package.py  test_igra_catalog.py  test_igra_recent_cli.py  test_lan_worker_run_script.py  test_local_run_manager.py  test_local_run_queue.py  test_moist_mountain_wave_case.py  test_mountain_wave_case.py  test_mountain_wave_terrain_visualization.py  test_mountain_waves_variations.py  test_mountain_waves_world.py  test_observed_sounding.py  test_output_products.py  test_result_cards.py  (+22 more)
(+167 files in other folders)
